Limiting the text to no more than 2 lines for the title to prevent content overflowing in text scrambling

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ main {
 }
 
 
+
 #letter-e {
     opacity: 0;
 }
@@ -92,16 +93,11 @@ main {
 
 
 #limit-title {
-    /*
+    overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    word-wrap: break-word;
-    
-    display: block;
-    height: 100px;
-    border: solid 2px red;
-    */
+
 }
 
 .title {
